--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -11,3 +11,10 @@
     @apply w-full py-2 rounded-md text-white bg-green-500 hover:bg-green-600 duration-300
 }
 
+.myScroll::-webkit-scrollbar {
+    @apply w-1
+}
+
+.myScroll::-webkit-scrollbar-thumb {
+    @apply bg-[#223742]
+}
